feat(desktop): add notifications (#244)
* feat(desktop): add notifications

* chore(desktop): add faucet to Help menu for now

* chore(AccountService): address feedback

* Update web/angular-wallet/src/app/setup/account/account.service.ts

Co-Authored-By: blankey1337 <42594751+blankey1337@users.noreply.github.com>

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Has posat aquest Àlies a la venta.",
   "your_name": "El vostre nom",
-  "your_passphrase": "La vostre Contrasenya"
+  "your_passphrase": "La vostre Contrasenya",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
