--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -925,5 +925,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "You are offering this alias for sale.",
   "your_name": "Your Name",
-  "your_passphrase": "Your Passphrase"
+  "your_passphrase": "Your Passphrase",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
