--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Tarjoat tätä aliasta myytäväksi.",
   "your_name": "Nimesi",
-  "your_passphrase": "Tunnuslauseesi"
+  "your_passphrase": "Tunnuslauseesi",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
