--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Esta poñendo a venta este alias.",
   "your_name": "O seu nome",
-  "your_passphrase": "O seu contrasinal"
+  "your_passphrase": "O seu contrasinal",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
