--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Вы предлагаете этот псевдоним для продажи.",
   "your_name": "Ваше имя",
-  "your_passphrase": "Ваш пароль"
+  "your_passphrase": "Ваш пароль",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
