--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "U biedt deze alias te koop aan.",
   "your_name": "Uw naam",
-  "your_passphrase": "Uw wachtwoord/passphrase"
+  "your_passphrase": "Uw wachtwoord/passphrase",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
