--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -912,5 +912,7 @@
   "your_address": "Your Address",
   "your_alias_sale_offer": "Ви нудите овај алиас на продају.",
   "your_name": "Ваше Име",
-  "your_passphrase": "Ваша Лозинка"
+  "your_passphrase": "Ваша Лозинка",
+  "youve_got_burst": "You've got Burst!",
+  "you_sent_burst": "You sent Burst"
 }
