Feat/confirmed account (#252)
* fix(account): restrict transactions to 500 on first load

* fix(AccountService): get transactions even if getAccount fails

* fix(create): fix back button on step 2

* feat(account): add unconfirmed account icon

* fix(AccountService): properly set confirmed

* chore: update changelog.md

* feat(dashboard): add welcome notification

* chore: reset proxy config

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Искате ли да изберете своя собствена парола-фраза? Щракнете тук.",
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Кликнете тук, за да научите повече за него",
   "click_here_to_enable": "Натиснете тук за разрешаване.",
   "close": "Затвори",
@@ -899,7 +900,7 @@
   "warning": "Предупреждение",
   "website": "Уебсайт",
   "website_or_text": "Уебсайт или текст",
-  "welcome_to_burst": "Welcome to Burst",
+  "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
