--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "¿Prefiere elegir su propia contraseña? Haga clic aquí.",
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Haga clic aquí para saber más sobre esto.",
   "click_here_to_enable": "Haga clic aquí para activarlo.",
   "close": "Cerrar",
@@ -899,7 +900,7 @@
   "warning": "Aviso",
   "website": "Página Web",
   "website_or_text": "Sitio web o Texto",
-  "welcome_to_burst": "Bienvenido a Burst",
+  "welcome_to_burst": "¡Bienvenido a Burst!",
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
