--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Haluatko valita oman tunnuslauseen? Klikkaa tästä.",
   "clear_results": "Tyhjennä  tulokset",
   "clear_search_results": "Tyhjennä hakutulokset",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Saat lisätietoja siitä napsauttamalla tätä",
   "click_here_to_enable": "Klikkaa tästä ottaaksesi sen käyttöön.",
   "close": "Sulje",
@@ -899,7 +900,7 @@
   "warning": "Varoitus",
   "website": "Verkkosivu",
   "website_or_text": "Websivu tai teksti",
-  "welcome_to_burst": "Tervetuloa BURST:iin",
+  "welcome_to_burst": "Tervetuloa BURST:iin!",
   "with_burst": "BURST:n kanssa",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
