--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Voulez-vous choisir votre propre phrase de passe ? Cliquez ici.",
   "clear_results": "Effacer les résultats",
   "clear_search_results": "Effacer les résultats de recherche",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Cliquez ici pour en savoir plus",
   "click_here_to_enable": "Cliquez ici pour l'activer.",
   "close": "Fermer",
@@ -899,7 +900,7 @@
   "warning": "Attention",
   "website": "Site web",
   "website_or_text": "Site web ou description",
-  "welcome_to_burst": "Bienvenue sur le client Burst",
+  "welcome_to_burst": "Bienvenue sur le client Burst!",
   "with_burst": "Avec BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Oui",
