--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "¿Prefire elexila súa propia contrasinal? faga clic aquí.",
   "clear_results": "Clear Results",
   "clear_search_results": "Limpar resultados de búsqueda",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Fai clic aquí para saber máis sobre el",
   "click_here_to_enable": "Faga clic aquí para activalo.",
   "close": "Close",
@@ -899,7 +900,7 @@
   "warning": "Aviso",
   "website": "Páxina web",
   "website_or_text": "Sitio web ou texto",
-  "welcome_to_burst": "Benvido a Burst",
+  "welcome_to_burst": "Benvido a Burst!",
   "with_burst": "Con BURST",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
