--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "अपने खुद का passphrase चयन करना चाहते हैं? यहाँ क्लिक करें।",
   "clear_results": "परिणामों को साफ़ करें",
   "clear_search_results": "खोज परिणामों को साफ़ करें",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "इसके बारे में अधिक जानने के लिए यहां क्लिक करें",
   "click_here_to_enable": "इसे सक्षम करने के लिए यहाँ क्लिक करें।",
   "close": "बंद करें",
@@ -899,7 +900,7 @@
   "warning": "Warning",
   "website": "Website",
   "website_or_text": "Website or Text",
-  "welcome_to_burst": "Welcome to Burst",
+  "welcome_to_burst": "Welcome to Burst!",
   "with_burst": "With BURST",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
