--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "独自のパスフレーズを選択したい場合は、ここをクリックしてください。",
   "clear_results": "結果をクリア",
   "clear_search_results": "検索結果をクリア",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "それについての詳細を知るためにここをクリックしてください",
   "click_here_to_enable": "有効にするには、ここをクリックしてください。",
   "close": "閉じる",
@@ -899,7 +900,7 @@
   "warning": "警告",
   "website": "ウェブサイト",
   "website_or_text": "ウェブサイトまたはテキスト",
-  "welcome_to_burst": "Burst へようこそ",
+  "welcome_to_burst": "Burst へようこそ!",
   "with_burst": "BURSTと",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
