--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Quer escolher a sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar Resultado de Pesquisa",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "close": "Fechar",
@@ -899,7 +900,7 @@
   "warning": "Aviso",
   "website": "Página Web",
   "website_or_text": "Sitio web ou Texto",
-  "welcome_to_burst": "Bem vindo a Burst",
+  "welcome_to_burst": "Bem vindo a Burst!",
   "with_burst": "Com BURST",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
