--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -129,6 +129,7 @@
     "checking_for_updates": "Provera nove verzije je u toku...",
     "choose_own_passphrase": "Želite da izaberete svoju lozinku? Kliknite ovde.",
     "clear_results": "Obriši Rezultate",
+    "click_to_claim": "Click here to claim your free Burst.",
     "clear_search_results": "Obrišite Rezultate Pretrage",
     "click_here_to_enable": "Kliknite ovde da ga omogućite.",
     "close": "Zatvori",
@@ -887,7 +888,7 @@
     "warning": "Upozorenje",
     "website": "Vebsajt",
     "website_or_text": "Web sajt ili Tekst",
-    "welcome_to_burst": "Dobrodošli u Burst",
+    "welcome_to_burst": "Dobrodošli u Burst!",
     "with_burst": "Sa BURST-om",
     "x_confirmations": "__x__ konfirmacija",
     "yes": "Da",
