--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Желите одабрати властиту лозинку? Кликните овде.",
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Кликните овде да бисте сазнали више о томе",
   "click_here_to_enable": "Кликните овде да га омогућите.",
   "close": "Затвори",
@@ -899,7 +900,7 @@
   "warning": "Упозорење",
   "website": "Вебсајт",
   "website_or_text": "Wеб сајт или Текст",
-  "welcome_to_burst": "Добродошли у BURST",
+  "welcome_to_burst": "Добродошли у BURST!",
   "with_burst": "Са BURST-ом",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
