--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Хочете вибрати свій власний пароль? Натисніть тут.",
   "clear_results": "Очистити результати",
   "clear_search_results": "Очистка результатів пошуку",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Натисніть тут, щоб дізнатися більше про це",
   "click_here_to_enable": "Натисніть тут, щоб ввімкнути.",
   "close": "Закрити",
@@ -899,7 +900,7 @@
   "warning": "Увага",
   "website": "Веб-сайт",
   "website_or_text": "Веб-сайт або текст",
-  "welcome_to_burst": "Ласкаво просимо в Burst",
+  "welcome_to_burst": "Ласкаво просимо в Burst!",
   "with_burst": "З BURST",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
