--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "Chcete si zvoliť svoje vlastné heslo? Kliknite sem.",
   "clear_results": "Vymazať výsledky",
   "clear_search_results": "Vymazať výsledky vyhľadávania",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "Kliknite tu a dozviete sa viac o ňom",
   "click_here_to_enable": "Kliknite sem pre aktiváciu.",
   "close": "Zavrieť",
@@ -899,7 +900,7 @@
   "warning": "Upozornenie",
   "website": "Webstránka",
   "website_or_text": "Webstránka alebo text",
-  "welcome_to_burst": "Vitajte v Burst",
+  "welcome_to_burst": "Vitajte v Burst!",
   "with_burst": "S BURST",
   "x_confirmations": "__x__ potvrdení",
   "yes": "Áno",
