--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "想选择您自己的密码？请单击此处。",
   "clear_results": "清除结果",
   "clear_search_results": "清除搜索结果",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "点击此处启用它。",
   "close": "关闭",
@@ -899,7 +900,7 @@
   "warning": "警告",
   "website": "网站",
   "website_or_text": "网站或文本",
-  "welcome_to_burst": "欢迎来到 Burst",
+  "welcome_to_burst": "欢迎来到 Burst!",
   "with_burst": "与 BURST",
   "x_confirmations": "__x__ 确认",
   "yes": "是",
