--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -133,6 +133,7 @@
   "choose_own_passphrase": "想選擇您自己的密碼? 請單擊此處。",
   "clear_results": "清除結果",
   "clear_search_results": "清除搜尋結果",
+  "click_to_claim": "Click here to claim your free Burst.",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "點擊此處啟用它。",
   "close": "關閉​​​",
@@ -899,7 +900,7 @@
   "warning": "警告",
   "website": "網站",
   "website_or_text": "網站或文本",
-  "welcome_to_burst": "歡迎來到 Burst",
+  "welcome_to_burst": "歡迎來到 Burst!",
   "with_burst": "與 BURST",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
