--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -158,6 +158,7 @@
   "contacts_local_storage_help": "Atminkite: Kontaktai saugomi kompiuteryje, o ne viešoje blokų grandinėje.",
   "contacts_no_db_warning": "Jūsų naršyklė nepalaiko prieigos prie duomenų bazės. Be jos negalima sukurti kontaktų.",
   "continue_forging": "Tęsti \"kalimą",
+  "copy_account_address": "Copy Address",
   "copy_account_id": "Kopijuoti sąskaitos ID",
   "copy_asset_id": "Kopijuoti aktyvo ID",
   "copy_asset_link": "Kopijuoti aktyvo nuorodą",
