--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -154,6 +154,7 @@
     "contact_account_link": "Kontakt je povezan sa nalogom __account_id__<\/strong>.",
     "contact_name": "Ime Kontakta",
     "continue_forging": "Nastavi Kovanje",
+    "copy_account_address": "Copy Address",
     "copy_account_id": "Kopirajte ID Naloga",
     "copy_asset_id": "Kopirajte ID Asset-a",
     "copy_asset_link": "Kopirajte Link Asset-a",
