--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -158,6 +158,7 @@
   "contacts_local_storage_help": "Contatos são armazenados localmente, não na corrente de blocos.",
   "contacts_no_db_warning": "Seu navegador não oferece o suporte de acesso ao banco de dados, sem a qual não é possível criar contatos.",
   "continue_forging": "Continuar Forjando",
+  "copy_account_address": "Copy Address",
   "copy_account_id": "Copy Account ID",
   "copy_asset_id": "Copy Asset ID",
   "copy_asset_link": "Copy Asset Link",
