--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -158,6 +158,7 @@
   "contacts_local_storage_help": "Запам'ятайте: контакти зберігаються локально, а не в blockchain.",
   "contacts_no_db_warning": "Ваш браузер не підтримує доступ до бази даних, без чого не можуть створюватися контакти.",
   "continue_forging": "Продовжити форжинг",
+  "copy_account_address": "Copy Address",
   "copy_account_id": "Скопіюйте Ідентифікатор аккаунта",
   "copy_asset_id": "Копіювати ID активу",
   "copy_asset_link": "Скопіювати посилання активу",
