chore(i18n): minor lang tweak

--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -905,7 +905,7 @@
   "youve_got_burst": "You've got Burst!",
   "update_burst_account": "Update your burst account",
   "record": "Record",
-  "verify": "verify",
+  "verify": "Verify",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "are_you_sure": "Do you you really want to send Burst to them?",
