--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -903,5 +903,18 @@
     "you_sold_assets": "Prodali ste ili transferovali <a href='#' data-goto-asset='__asset__'>1 __name__ asset-a<\/a>.",
     "you_sold_assets_plural": "Prodali ste ili transferovali <a href='#' data-goto-asset='__asset__'>__count__ __name__asset-a<\/a>.",
   "youve_got_burst": "You've got Burst!",
+  "update_burst_account": "Update your burst account",
+  "record": "Record",
+  "verify": "Verify",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "are_you_sure": "Do you you really want to send Burst to them?",
+  "get_burst_account": "Get your free Burst account now.",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_user_no": "No, I have an account",
+  "create_passive": "Create a new account without passphrase",
+  "or": "or"
+,
   "you_sent_burst": "You sent Burst"
 }
